added basic html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
   </head>
   <body>
     <h1>World Clock</h1>
+    <div class="container">
+      <select>
+        <option value="">Select a city</option>
+        <option value="">Jerusalem 🇮🇱</option>
+        <option value="">New York 🇺🇸</option>
+        <option value="">Tokyo 🇯🇵</option>
+        <option value="">Manila 🇵🇭</option>
+      </select>
+
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 13, 2023</div>
+        <div class="time">11:35:14</div>
+      </div>
+      <div class="city">
+        <h2>Toronto</h2>
+        <div class="date">August 13, 2023</div>
+        <div class="time">11:35:14</div>
+      </div>
+    </div>
     <footer>
       This project is coded by Arlene Runyon and is
-      <a href="/" target="_blank">open-soured on Github.</a>
+      <a
+        href="https://github.com/Atomreirun/World-Clock-Project"
+        target="_blank"
+        >open-soured on Github.</a
+      >
     </footer>
-    <script src="index.js"></script>
+    <script src="javascript/index.js"></script>
   </body>
 </html>
