--- a/index.html
+++ b/index.html
@@ -19,18 +19,39 @@
       </select>
 
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 13, 2023</div>
-        <div class="time">11:35:14</div>
+        <div>
+          <h2>Sydney 🇦🇺</h2>
+          <div class="date">August 13, 2023</div>
+        </div>
+        <div class="time">11:35:14 <small> AM </small></div>
       </div>
+
       <div class="city">
-        <h2>Toronto</h2>
-        <div class="date">August 13, 2023</div>
-        <div class="time">11:35:14</div>
+        <div>
+          <h2>Toronto 🇨🇦</h2>
+          <div class="date">August 13, 2023</div>
+        </div>
+        <div class="time">11:35:14 <small> AM </small></div>
+      </div>
+
+      <div class="city">
+        <div>
+          <h2>Berlin 🇩🇪</h2>
+          <div class="date">August 13, 2023</div>
+        </div>
+        <div class="time">11:35:14 <small> AM </small></div>
+      </div>
+
+      <div class="city">
+        <div>
+          <h2>Taiwan 🇹🇼</h2>
+          <div class="date">August 13, 2023</div>
+        </div>
+        <div class="time">11:35:14 <small> AM </small></div>
       </div>
     </div>
     <footer>
-      This project is coded by Arlene Runyon and is
+      This project is coded by <strong> Arlene Runyon</strong> and is
       <a
         href="https://github.com/Atomreirun/World-Clock-Project"
         target="_blank"
