--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Project by Arlene Runyon</title>
   </head>
   <body>
@@ -18,34 +21,34 @@
         <option value="">Manila 🇵🇭</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="sydney">
         <div>
           <h2>Sydney 🇦🇺</h2>
-          <div class="date">August 13, 2023</div>
+          <div class="date">August 13th, 2023</div>
         </div>
         <div class="time">11:35:14 <small> AM </small></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="toronto">
         <div>
           <h2>Toronto 🇨🇦</h2>
-          <div class="date">August 13, 2023</div>
+          <div class="date">August 13th, 2023</div>
         </div>
         <div class="time">11:35:14 <small> AM </small></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="berlin">
         <div>
           <h2>Berlin 🇩🇪</h2>
-          <div class="date">August 13, 2023</div>
+          <div class="date">August 13th, 2023</div>
         </div>
         <div class="time">11:35:14 <small> AM </small></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="taiwan">
         <div>
           <h2>Taiwan 🇹🇼</h2>
-          <div class="date">August 13, 2023</div>
+          <div class="date">August 13th, 2023</div>
         </div>
         <div class="time">11:35:14 <small> AM </small></div>
       </div>
