updated select value

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Project by Arlene Runyon</title>
   </head>
   <body>
@@ -16,10 +16,10 @@
 
       <select id="city">
         <option value="">Select a city ...</option>
-        <option value="">Jerusalem</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
-        <option value="">Manila</option>
+        <option value="Israel/Jerusalem">Jerusalem</option>
+        <option value="America/New York">New York</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Asia/Manila">Manila</option>
       </select>
 
       <div class="cities">
