--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Project by Arlene Runyon</title>
   </head>
@@ -16,13 +15,13 @@
 
       <select id="city">
         <option value="">Select a city ...</option>
-        <option value="Israel/Jerusalem">Jerusalem</option>
-        <option value="America/New York">New York</option>
+        <option value="Europe/Madrid">Madrid</option>
+        <option value="America/New_York">New York</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Asia/Manila">Manila</option>
       </select>
 
-      <div class="cities">
+      <div class="cities" id="cities">
         <div class="city" id="sydney">
           <div>
             <h2>Sydney</h2>
