--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
       <select id="city">
         <option value="">Select a city ...</option>
+        <option value="current">My current location</option>
         <option value="Europe/Madrid">Madrid</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Asia/Manila">Manila</option>
       </select>
 
-      <div class="cities" id="cities">
+      <div id="cities">
         <div class="city" id="sydney">
           <div>
             <h2>Sydney</h2>
